hw 3.3 done.